<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".Activity.Auth.ForgetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentStart="true"
        android:background="@drawable/ic_wave" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forget2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/we_just_need_your_registered_email_address_to_send_you_your_password_reset" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/border_btn_auth"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/_8sdp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_12sdp" />

        <ProgressBar
            android:id="@+id/progressCircular"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"

            android:indeterminateDrawable="@drawable/progress"
            android:visibility="invisible"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnForgetPassword"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/round_border_btn_auth"
            android:padding="@dimen/_12sdp"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@null" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/register"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_wave_2"
        android:importantForAccessibility="no" />
</RelativeLayout>