<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/background"
        android:backgroundTint="@color/secondaryColor"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quizTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/quiz_title"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/quizSubject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:maxLines="1"
                    android:text="@string/subject_title"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quizStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pending" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="@dimen/_2sdp"
            android:background="@color/mainColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/questions"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quizNumQuestions"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="00"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="|"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quiz_degree"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quizDegree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="00"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="@dimen/_2sdp"
            android:background="@color/mainColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/quizDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quiz_date"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quizStartTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start_time"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=":"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quizEndTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/end_time"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <Button
            android:id="@+id/startQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:backgroundTint="@color/gray"
            android:gravity="center"
            android:text="@string/quiz"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>